--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div data-depth="0.15" class="corrals">
             <img src="/img/caral.png" alt="axe and jumper" srcset="">
         </div>
+        <div><p>Крутые</p></<div>
     </div>
     <script src="/dist.js"></script>
+    
 </body>
 </html>
